--- a/Src/iFramework.Plugins/IFramework.Logging.Abastracts/IFramework.Logging.Abstracts.csproj
+++ b/Src/iFramework.Plugins/IFramework.Logging.Abastracts/IFramework.Logging.Abstracts.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFramework>netstandard2.0</TargetFramework>
+		<TargetFrameworks>netstandard2.0;net6.0;net7.0</TargetFrameworks>
 		<PublishRepositoryUrl>true</PublishRepositoryUrl>
 		<IncludeSymbols>true</IncludeSymbols>
 		<SymbolPackageFormat>snupkg</SymbolPackageFormat>
@@ -9,15 +9,19 @@
 		<EmbedUntrackedSources>true</EmbedUntrackedSources>
 		<PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
 	</PropertyGroup>
+		<ItemGroup Condition="$(TargetFramework) == 'net7.0'">
+			<PackageReference Include="Microsoft.Extensions.Logging.Configuration" Version="7.0.0" />
+		</ItemGroup>
+
+		<ItemGroup Condition="$(TargetFramework) == 'net6.0' Or $(TargetFramework) == 'netstandard2.0'">
+			<PackageReference Include="Microsoft.Extensions.Logging.Configuration" Version="6.0.0" />
+		</ItemGroup>
+
 	<ItemGroup>
-		<PackageReference Include="Microsoft.Extensions.Logging.Configuration" Version="6.0.0" />
 		<PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.1.1">
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
-	</ItemGroup>
-
-	<ItemGroup>
 		<ProjectReference Include="..\..\iFramework\IFramework.csproj" />
 	</ItemGroup>
 
