--- a/Src/iFramework.Plugins/IFramework.Logging.Log4Net/IFramework.Logging.Log4Net.csproj
+++ b/Src/iFramework.Plugins/IFramework.Logging.Log4Net/IFramework.Logging.Log4Net.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFrameworks>netstandard2.0;net7.0</TargetFrameworks>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 	  <PackageReleaseNotes>Enable SourceLink.</PackageReleaseNotes>
 	  <PublishRepositoryUrl>true</PublishRepositoryUrl>
@@ -9,18 +9,20 @@
     <EmbedUntrackedSources>true</EmbedUntrackedSources>
 	  <SymbolPackageFormat>snupkg</SymbolPackageFormat>      	
   </PropertyGroup>
-
-  <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Logging.Configuration" Version="6.0.0" />
-    <PackageReference Include="Microsoft.Extensions.Logging.Log4Net.AspNetCore" Version="6.0.0" />
-    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.1.1">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-    </PackageReference>
+  <ItemGroup Condition="$(TargetFramework) == 'net7.0'">
+  	<PackageReference Include="Microsoft.Extensions.Logging.Configuration" Version="7.0.0" />
+  </ItemGroup>
+  <ItemGroup Condition="$(TargetFramework) == 'netstandard2.0'">
+	  <PackageReference Include="Microsoft.Extensions.Logging.Configuration" Version="6.0.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\iFramework\IFramework.csproj" />
+	  <PackageReference Include="Microsoft.Extensions.Logging.Log4Net.AspNetCore" Version="6.1.0" />
+	  <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.1.1">
+		  <PrivateAssets>all</PrivateAssets>
+		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+	  </PackageReference>
+	  <ProjectReference Include="..\..\iFramework\IFramework.csproj" />
   </ItemGroup>
 
 </Project>
