--- a/Src/iFramework.Plugins/IFramework.MessageStores/IFramework.MessageStores.Relational.csproj
+++ b/Src/iFramework.Plugins/IFramework.MessageStores/IFramework.MessageStores.Relational.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.1;net6.0</TargetFrameworks>
+    <TargetFrameworks>netstandard2.1;net6.0;net7.0</TargetFrameworks>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <Authors>Ivan</Authors>
     <PackageProjectUrl>https://github.com/IvanZheng/IFramework</PackageProjectUrl>
@@ -33,7 +33,9 @@
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="6.0.3" />
 	</ItemGroup>
 
-
+	<ItemGroup Condition="$(TargetFramework) == 'net7.0'">
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="7.0.1" />
+	</ItemGroup>
   <ItemGroup>
 
     <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.1.1">
