--- a/Src/Sample/Sample.CommandServiceCore/appsettings.json
+++ b/Src/Sample/Sample.CommandServiceCore/appsettings.json
@@ -11,13 +11,13 @@
     "SampleModelContext.MongoDb": "mongodb://10.100.7.46:9007/SampleModelContext?maxPoolSize=2000&connectTimeoutMS=60000&serverSelectionTimeout=60000&socketTimeout=60000"
   },
   "KafkaClientOptions": {
-    "BrokerList": "devops.vorwerkchina.com:9092",
-    "Extensions": {
-      "security.protocol": "sasl_plaintext",
-      "sasl.mechanism": "PLAIN",
-      "sasl.username": "",
-      "sasl.password": ""
-    }
+    "BrokerList": "localhost:9092"
+    //"Extensions": {
+    //  "security.protocol": "sasl_plaintext",
+    //  "sasl.mechanism": "PLAIN",
+    //  "sasl.username": "",
+    //  "sasl.password": ""
+    //}
   },
   "PathBase": "/core",
   "App": "CommandServiceCore",
