--- a/Src/iFramework.Plugins/IFramework.EntityFrameworkCore/IFramework.EntityFrameworkCore.csproj
+++ b/Src/iFramework.Plugins/IFramework.EntityFrameworkCore/IFramework.EntityFrameworkCore.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFrameworks>netstandard2.1;net6.0;net7.0</TargetFrameworks>
+		<TargetFrameworks>netstandard2.1;net6.0;</TargetFrameworks>
 		<AssemblyName>IFramework.EntityFrameworkCore</AssemblyName>
 		<RootNamespace>IFramework.EntityFrameworkCore</RootNamespace>
 		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
@@ -28,9 +28,6 @@
 	</ItemGroup>
 
 	<ItemGroup Condition="$(TargetFramework) == 'net6.0'">
-		<PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="6.0.3" />
-	</ItemGroup>
-	<ItemGroup Condition="$(TargetFramework) == 'net7.0'">
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="7.0.1" />
 	</ItemGroup>
 	<ItemGroup>
