--- a/Src/iFramework.Plugins/IFramework.DependencyInjection.Autofac/IFramework.DependencyInjection.Autofac.csproj
+++ b/Src/iFramework.Plugins/IFramework.DependencyInjection.Autofac/IFramework.DependencyInjection.Autofac.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.0;net6.0;net7.0</TargetFrameworks>
+    <TargetFramework>netstandard2.0</TargetFramework>
     <Authors>Ivan</Authors>
     <PackageProjectUrl>https://github.com/IvanZheng/IFramework</PackageProjectUrl>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
@@ -17,20 +17,12 @@
     <NoWarn>1701;1702;1591</NoWarn>
   </PropertyGroup>
 
-	<ItemGroup Condition="$(TargetFramework) == 'net7.0'">
+	<ItemGroup>
 		<PackageReference Include="Autofac" Version="6.5.0" />
 		<PackageReference Include="Autofac.Extensions.DependencyInjection" Version="8.0.0" />
 		<PackageReference Include="Autofac.Extras.DynamicProxy" Version="6.0.1" />
 		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
 	</ItemGroup>
-
-  <ItemGroup Condition="$(TargetFramework) == 'net6.0' Or $(TargetFramework) == 'netstandard2.0'">
-    <PackageReference Include="Autofac" Version="6.3.0" />
-    <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="7.2.0" />
-    <PackageReference Include="Autofac.Extras.DynamicProxy" Version="6.0.0" />
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
-  </ItemGroup>
-
   <ItemGroup>
 	  <PackageReference Include="System.ComponentModel.TypeConverter" Version="4.3.0" />
 	  <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.1.1">
