--- a/Src/iFramework.Plugins/IFramework.Logging.Abastracts/IFramework.Logging.Abstracts.csproj
+++ b/Src/iFramework.Plugins/IFramework.Logging.Abastracts/IFramework.Logging.Abstracts.csproj
@@ -1,7 +1,7 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFrameworks>netstandard2.0;net6.0;net7.0</TargetFrameworks>
+		<TargetFramework>netstandard2.0</TargetFramework>
 		<PublishRepositoryUrl>true</PublishRepositoryUrl>
 		<IncludeSymbols>true</IncludeSymbols>
 		<SymbolPackageFormat>snupkg</SymbolPackageFormat>
@@ -9,14 +9,9 @@
 		<EmbedUntrackedSources>true</EmbedUntrackedSources>
 		<PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
 	</PropertyGroup>
-		<ItemGroup Condition="$(TargetFramework) == 'net7.0'">
+		<ItemGroup>
 			<PackageReference Include="Microsoft.Extensions.Logging.Configuration" Version="7.0.0" />
 		</ItemGroup>
-
-		<ItemGroup Condition="$(TargetFramework) == 'net6.0' Or $(TargetFramework) == 'netstandard2.0'">
-			<PackageReference Include="Microsoft.Extensions.Logging.Configuration" Version="6.0.0" />
-		</ItemGroup>
-
 	<ItemGroup>
 		<PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.1.1">
 			<PrivateAssets>all</PrivateAssets>
