--- a/Src/iFramework.Plugins/IFramework.Logging.Log4Net/IFramework.Logging.Log4Net.csproj
+++ b/Src/iFramework.Plugins/IFramework.Logging.Log4Net/IFramework.Logging.Log4Net.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.0;net7.0</TargetFrameworks>
+    <TargetFramework>netstandard2.0</TargetFramework>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 	  <PackageReleaseNotes>Enable SourceLink.</PackageReleaseNotes>
 	  <PublishRepositoryUrl>true</PublishRepositoryUrl>
@@ -9,11 +9,8 @@
     <EmbedUntrackedSources>true</EmbedUntrackedSources>
 	  <SymbolPackageFormat>snupkg</SymbolPackageFormat>      	
   </PropertyGroup>
-  <ItemGroup Condition="$(TargetFramework) == 'net7.0'">
+  <ItemGroup>
   	<PackageReference Include="Microsoft.Extensions.Logging.Configuration" Version="7.0.0" />
-  </ItemGroup>
-  <ItemGroup Condition="$(TargetFramework) == 'netstandard2.0'">
-	  <PackageReference Include="Microsoft.Extensions.Logging.Configuration" Version="6.0.0" />
   </ItemGroup>
 
   <ItemGroup>
