--- a/Src/iFramework.Plugins/IFramework.Configuration.ProtectedJson/IFramework.Configuration.ProtectedJson.csproj
+++ b/Src/iFramework.Plugins/IFramework.Configuration.ProtectedJson/IFramework.Configuration.ProtectedJson.csproj
@@ -5,7 +5,7 @@
     <Nullable>enable</Nullable>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <PackageId>IFramework.Configuration.ProtectedJson</PackageId>
-    <Version>1.0.0-preview001</Version>
+    <Version>1.0.0</Version>
     <Authors>Ivan</Authors>
     <PackageProjectUrl>https://github.com/IvanZheng/IFramework</PackageProjectUrl>
     <Description></Description>
