add log for RocketMQConsume and producer

--- a/Src/Sample/Sample.CommandServiceCore/appsettings.json
+++ b/Src/Sample/Sample.CommandServiceCore/appsettings.json
@@ -20,7 +20,7 @@
     //}
   },
   "RocketMQClientOptions": {
-    "Endpoints": "dev.popbadminton.com:18080",
+    "Endpoints": ":18080",
     "Extensions": {
       "EnableSsl": false,
       "AccessKey": "",
