--- a/Src/iFramework.Plugins/IFramework.EntityFrameworkCore/IFramework.EntityFrameworkCore.csproj
+++ b/Src/iFramework.Plugins/IFramework.EntityFrameworkCore/IFramework.EntityFrameworkCore.csproj
@@ -24,6 +24,7 @@
 	</PropertyGroup>
 
 	<ItemGroup Condition="$(TargetFramework) == 'netstandard2.1'">
+		<PackageReference Include="System.Net.Http" Version="4.3.4" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="5.0.17" />
 	</ItemGroup>
 
@@ -32,7 +33,7 @@
 	</ItemGroup>
 
 	<ItemGroup Condition="$(TargetFramework) == 'net8.0'">
-		<PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="8.0.0" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="8.0.1" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -40,7 +41,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.1.1">
+		<PackageReference Include="Microsoft.SourceLink.GitHub" Version="8.0.0">
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
