add CloneWith for ValueObject

--- a/Src/Sample/Sample.CommandServiceCore/appsettings.json
+++ b/Src/Sample/Sample.CommandServiceCore/appsettings.json
@@ -1,4 +1,11 @@
 ﻿{
+  "ElasticsearchLogOptions": {
+    "App": "IFramework",
+    "UserName": "elastic",
+    "Password": "",
+    "BaseAddress": "http://172.16.28.184:9200",
+    "Index": "gench-log"
+  },
   "AliyunLogOptions": {
     "Endpoint": "cn-shanghai.log.aliyuncs.com",
     "Project": "vorwerk-api-gateway-test",
