--- a/Src/iFramework.Plugins/IFramework.Logging.Elasticsearch/IFramework.Logging.Elasticsearch.csproj
+++ b/Src/iFramework.Plugins/IFramework.Logging.Elasticsearch/IFramework.Logging.Elasticsearch.csproj
@@ -1,23 +1,20 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
-		<TargetFrameworks>netstandard2.0;net6.0</TargetFrameworks>
+		<TargetFramework>net6.0</TargetFramework>
 		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 	</PropertyGroup>
 
-	<ItemGroup Condition="$(TargetFramework) == 'netstandard2.0'">
-		<PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
-		<PackageReference Include="Refit.HttpClientFactory" Version="5.2.4" />
-	</ItemGroup>
+	
 
-	<ItemGroup Condition="$(TargetFramework) == 'net6.0'">
+	<ItemGroup>
 		<PackageReference Include="Refit.HttpClientFactory" Version="6.1.15" />
 		<PackageReference Include="Refit.Newtonsoft.Json" Version="6.1.15" />
+    <PackageReference Include="Elastic.Clients.Elasticsearch" Version="8.15.6" />
+		<PackageReference Include="Elastic.Extensions.Logging" Version="8.11.1" />
+		<PackageReference Include="IdentityModel" Version="7.0.0" />
+		<PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="8.0.0" />
 	</ItemGroup>
 	<ItemGroup>
-		<PackageReference Include="Elastic.Clients.Elasticsearch" Version="8.14.6" />
-		<PackageReference Include="Elastic.Extensions.Logging" Version="8.11.1" />
-		<PackageReference Include="IFramework.Logging.Abstracts" Version="6.0.0" />
-		<PackageReference Include="IdentityModel" Version="5.2.0" />
-		<PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="8.0.0" />
+	  <ProjectReference Include="..\IFramework.Logging.Abastracts\IFramework.Logging.Abstracts.csproj" />
 	</ItemGroup>
 </Project>
