--- a/Src/Sample/Sample.CommandServiceCore/Sample.CommandServiceCore.csproj
+++ b/Src/Sample/Sample.CommandServiceCore/Sample.CommandServiceCore.csproj
@@ -7,6 +7,7 @@
 		<DockerfileContext>..\..</DockerfileContext>
 		<AssemblyName>Sample.CommandServiceCore</AssemblyName>
 		<RootNamespace>Sample.CommandServiceCore</RootNamespace>
+    <DocumentationFile>.\Sample.CommandServiceCore.xml</DocumentationFile>
 	</PropertyGroup>
 	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
 		<WarningLevel>1</WarningLevel>
