upgrade to net10.0, but Pomelo.EntityFramework is not ready.

--- a/Src/iFramework.Plugins/IFramework.Logging.Elasticsearch/IFramework.Logging.Elasticsearch.csproj
+++ b/Src/iFramework.Plugins/IFramework.Logging.Elasticsearch/IFramework.Logging.Elasticsearch.csproj
@@ -1,21 +1,21 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
-		<TargetFramework>net6.0</TargetFramework>
+		<TargetFrameworks>net6.0;net10.0;</TargetFrameworks>
 		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 	</PropertyGroup>
 
 	
 
 	<ItemGroup>
-		<PackageReference Include="Refit.HttpClientFactory" Version="6.1.15" />
-		<PackageReference Include="Refit.Newtonsoft.Json" Version="6.1.15" />
+		<PackageReference Include="Refit.HttpClientFactory" Version="9.0.2" />
+		<PackageReference Include="Refit.Newtonsoft.Json" Version="9.0.2" />
     <PackageReference Include="Elastic.Clients.Elasticsearch" Version="8.15.6" />
 		<PackageReference Include="Elastic.Extensions.Logging" Version="8.11.1" />
 		<PackageReference Include="IdentityModel" Version="7.0.0" />
-		<PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="8.0.0" />
+		<PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="10.0.2" />
 	</ItemGroup>
 	<ItemGroup>
-    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="8.0.0">
+    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="10.0.102">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
