--- a/Src/iFramework.Plugins/IFramework.EntityFrameworkCore/IFramework.EntityFrameworkCore.csproj
+++ b/Src/iFramework.Plugins/IFramework.EntityFrameworkCore/IFramework.EntityFrameworkCore.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFrameworks>netstandard2.1;net6.0;net8.0;</TargetFrameworks>
+		<TargetFrameworks>netstandard2.1;net6.0;net8.0;net10.0;</TargetFrameworks>
 		<AssemblyName>IFramework.EntityFrameworkCore</AssemblyName>
 		<RootNamespace>IFramework.EntityFrameworkCore</RootNamespace>
 		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
@@ -37,13 +37,15 @@
 	<ItemGroup Condition="$(TargetFramework) == 'net8.0'">
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="8.0.1" />
 	</ItemGroup>
-
+	<ItemGroup Condition="$(TargetFramework) == 'net10.0'">
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="10.0.2" />
+	</ItemGroup>
 	<ItemGroup>
 	  <Compile Remove="ExtensionEntityMaterializerSource.cs" />
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Microsoft.SourceLink.GitHub" Version="8.0.0">
+		<PackageReference Include="Microsoft.SourceLink.GitHub" Version="10.0.102">
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
