--- a/Src/iFramework.Plugins/IFramework.Logging.Abastracts/IFramework.Logging.Abstracts.csproj
+++ b/Src/iFramework.Plugins/IFramework.Logging.Abastracts/IFramework.Logging.Abstracts.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFramework>netstandard2.0</TargetFramework>
+		<TargetFrameworks>netstandard2.0;net10.0;</TargetFrameworks>
 		<PublishRepositoryUrl>true</PublishRepositoryUrl>
 		<IncludeSymbols>true</IncludeSymbols>
 		<SymbolPackageFormat>snupkg</SymbolPackageFormat>
@@ -10,10 +10,10 @@
 		<PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
 	</PropertyGroup>
 		<ItemGroup>
-			<PackageReference Include="Microsoft.Extensions.Logging.Configuration" Version="8.0.0" />
+			<PackageReference Include="Microsoft.Extensions.Logging.Configuration" Version="10.0.2" />
 		</ItemGroup>
 	<ItemGroup>
-		<PackageReference Include="Microsoft.SourceLink.GitHub" Version="8.0.0">
+		<PackageReference Include="Microsoft.SourceLink.GitHub" Version="10.0.102">
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
