--- a/Src/iFramework.Plugins/IFramework.Logging.Log4Net/IFramework.Logging.Log4Net.csproj
+++ b/Src/iFramework.Plugins/IFramework.Logging.Log4Net/IFramework.Logging.Log4Net.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFrameworks>netstandard2.0;net10.0;</TargetFrameworks>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 	  <PackageReleaseNotes>Enable SourceLink.</PackageReleaseNotes>
 	  <PublishRepositoryUrl>true</PublishRepositoryUrl>
@@ -10,12 +10,12 @@
 	  <SymbolPackageFormat>snupkg</SymbolPackageFormat>      	
   </PropertyGroup>
   <ItemGroup>
-  	<PackageReference Include="Microsoft.Extensions.Logging.Configuration" Version="8.0.0" />
+  	<PackageReference Include="Microsoft.Extensions.Logging.Configuration" Version="10.0.2" />
   </ItemGroup>
 
   <ItemGroup>
 	  <PackageReference Include="Microsoft.Extensions.Logging.Log4Net.AspNetCore" Version="8.0.0" />
-	  <PackageReference Include="Microsoft.SourceLink.GitHub" Version="8.0.0">
+	  <PackageReference Include="Microsoft.SourceLink.GitHub" Version="10.0.102">
 		  <PrivateAssets>all</PrivateAssets>
 		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 	  </PackageReference>
