--- a/Src/iFramework.Plugins/IFramework.Logging.Serilog/IFramework.Logging.Serilog.csproj
+++ b/Src/iFramework.Plugins/IFramework.Logging.Serilog/IFramework.Logging.Serilog.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFrameworks>netstandard2.0;net10.0;</TargetFrameworks>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 	  <PackageReleaseNotes>Enable SourceLink.</PackageReleaseNotes>
 	  <PublishRepositoryUrl>true</PublishRepositoryUrl>
@@ -11,12 +11,12 @@
   </PropertyGroup>
   <ItemGroup>
 	  <PackageReference Include="Serilog.Expressions" Version="5.0.0" />
-	  <PackageReference Include="Serilog.Extensions.Logging" Version="8.0.0" />
-	  <PackageReference Include="Serilog.Settings.Configuration" Version="8.0.2" />
-	  <PackageReference Include="Serilog.Sinks.Async" Version="2.0.0" />
-	  <PackageReference Include="Serilog.Sinks.Console" Version="6.0.0" />
-	  <PackageReference Include="Serilog.Sinks.File" Version="6.0.0" />
-	  <PackageReference Include="Microsoft.SourceLink.GitHub" Version="8.0.0">
+	  <PackageReference Include="Serilog.Extensions.Logging" Version="10.0.0" />
+	  <PackageReference Include="Serilog.Settings.Configuration" Version="10.0.0" />
+	  <PackageReference Include="Serilog.Sinks.Async" Version="2.1.0" />
+	  <PackageReference Include="Serilog.Sinks.Console" Version="6.1.1" />
+	  <PackageReference Include="Serilog.Sinks.File" Version="7.0.0" />
+	  <PackageReference Include="Microsoft.SourceLink.GitHub" Version="10.0.102">
 		  <PrivateAssets>all</PrivateAssets>
 		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 	  </PackageReference>
